--- a/assets/templates/sys_train_head_progress.html
+++ b/assets/templates/sys_train_head_progress.html
@@ -74,7 +74,7 @@
     </script>
 	<script type="text/javascript">
 	$( document ).ready(function() {
-	$el.find('#chart_pr_progress").highcharts({
+	$('#chart_pr_progress").highcharts({
         chart: {
             plotBackgroundColor: null,
             plotBorderWidth: 0,
