--- a/frontl2/assets/css/style_dashboard.css
+++ b/frontl2/assets/css/style_dashboard.css
@@ -55,29 +55,25 @@ float - plate_gis and stats
 	z-index: 1000;
 }
 #plate_legend {
-	z-index: 1100;
+	z-index: 1000;
 }
-#pl_depot > div {
+#pl_depot > span {
 	z-index: 3000;
 }
-#pl_station > div {
+#pl_station > span {
 	z-index: 3000;
 }
-#pl_mspr > div {
+#pl_mspr > span {
 	z-index: 3000;
 }
-#pl_package > div {
+#pl_package > span {
 	z-index: 3000;
 }
 #pl_phase > div {
 	z-index: 3000;
 }
-/*#pl_package {*/
-    /*z-index: 3000;*/
-/*}*/
-#donut_plate{
-    z-index: 3000;
-}
+
+
 /*	plate_vector_map
 */
 #plate_vector_map {
@@ -154,24 +150,36 @@ float - plate_gis and stats
 	text-align: left;
 	font-size: 1.3vw;
 }
-#pcom_label span.set1 {top: 25.2%; left: 79.0%;}
-#pcom_label span.set2 {top: 39.0%; left: 78.9%;}
-#pcom_label span.set3 {top: 39.0%; left: 88.9%;}
-#pcom_label span.set4 {top: 52.0%; left: 78.9%;}
-#pcom_label span.set5 {top: 52.0%; left: 88.9%;}
-#pcom_label span.set6 {top: 64.5%; left: 78.9%;}
-#pcom_label span.set7 {top: 64.5%; left: 88.9%;}
-#pcom_label span.set8 {top: 77.0%; left: 78.9%;}
+
+#pcom_label span.set2, #pcom_label span.set3,
+#pcom_label span.set4, #pcom_label span.set5,
+#pcom_label span.set6, #pcom_label span.set7,
+#pcom_label span.set8 {
+	background: #205;
+	padding: 0 0 10px;
+	border-bottom: 2px solid #335;
+}
+
+#pcom_label span.set1 {top: 27.0%; left: 79.0%;}
+#pcom_label span.set2 {top: 37.0%; left: 78.9%;}
+#pcom_label span.set3 {top: 37.0%; left: 89.4%;}
+#pcom_label span.set4 {top: 48.5%; left: 78.9%;}
+#pcom_label span.set5 {top: 48.5%; left: 89.4%;}
+#pcom_label span.set6 {top: 59.5%; left: 78.9%;}
+#pcom_label span.set7 {top: 59.5%; left: 89.4%;}
+#pcom_label span.set8 {top: 70.5%; left: 78.9%;}
 
 /*	pcom_value
 */
 #pcom_value span {
 	/*display: none;*/
 	position: absolute;
+	margin-left: 2px;
 	font-size: 1.7vw;
+	border-top: 2px solid #335;
 	color: #ff0;
 	width: 10%;
-	background: none;
+	background: #205;
 	text-align: center;
 	text-shadow:
 	-1px -1px 0 rgba(0,0,0,1),  
@@ -180,12 +188,12 @@ float - plate_gis and stats
 	1px 1px 0 rgba(0,0,0,1);
 }
 #pcom_value span.set1 {top: 32.0%; left: 78.8%;}
-#pcom_value span.set2 {top: 32.0%; left: 88.8%;}
-#pcom_value span.set3 {top: 44.7%; left: 78.8%;}
-#pcom_value span.set4 {top: 44.7%; left: 88.8%;}
-#pcom_value span.set5 {top: 57.3%; left: 78.8%;}
-#pcom_value span.set6 {top: 57.3%; left: 88.8%;}
-#pcom_value span.set7 {top: 70.0%; left: 78.8%;}
+#pcom_value span.set2 {top: 32.0%; left: 89.4%;}
+#pcom_value span.set3 {top: 43.2%; left: 78.8%;}
+#pcom_value span.set4 {top: 43.2%; left: 89.4%;}
+#pcom_value span.set5 {top: 54.3%; left: 78.8%;}
+#pcom_value span.set6 {top: 54.3%; left: 89.4%;}
+#pcom_value span.set7 {top: 65.5%; left: 78.8%;}
 
 
 /*	pl_label_header
@@ -193,23 +201,23 @@ float - plate_gis and stats
 #pl_label_header span {
 	/*display: none;*/
 	position: absolute;
-	font-size: 1.3vw;
+	font-size: 1.1vw;
 	color: #fff;
 }
-#pl_label_header span.set1 {top: 2.0%; left: 2.5%;}
+#pl_label_header span.set1 {top: 2.0%; left: 3.5%;}
 
 /*	pl_label_content
 */
 #pl_label_content span {
 	/*display: none;*/
 	position: absolute;
-	font-size: .7vw;
+	font-size: .9vw;
 	color: #fff;
 }
-#pl_label_content span.set1 {top: 7.0%; left: 6.0%;}
-#pl_label_content span.set2 {top: 9.6%; left: 6.0%;}
-#pl_label_content span.set3 {top: 12.2%; left: 6.0%;}
-#pl_label_content span.set4 {top: 14.8%; left: 6.0%;}
+#pl_label_content span.set1 {top: 5.4%; left: 7.3%;}
+#pl_label_content span.set2 {top: 8.0%; left: 7.3%;}
+#pl_label_content span.set3 {top: 10.6%; left: 7.3%;}
+#pl_label_content span.set4 {top: 13.2%; left: 7.3%;}
 
 /*plate_issue*/
 /*	pi_title
@@ -253,7 +261,7 @@ float - plate_gis and stats
 	font-size: 2em;
 	color: rgba(255,255,255,.5);
 }
-#pl_phase span.set1 {top: 21%; left: 2.5%;}
+#pl_phase span.set1 {top: 16.5%; left: 2.5%;}
 #pl_phase span.set2 {top: 27%; left: 65%;}
 
 /*	pl_package
@@ -265,23 +273,22 @@ float - plate_gis and stats
 	font-weight: bold;
 	padding: 2px 5px;
 	border-radius: 3px;
-	background: rgba(0,0,0,.15);
+	background: rgba(0,0,0,.25);
+	border:1px solid rgba(0,0,0,.35);
 	color: #fff;
 }
-#pl_package span.set1 {top: 69.0%; left: 14.0%;}
-#pl_package span.set2 {top: 54.0%; left: 16.5%;}
-#pl_package span.set3 {top: 44.0%; left: 20.5%;}
-#pl_package span.set4 {top: 30.0%; left: 31.5%;}
-#pl_package span.set5 {top: 50.0%; left: 43.5%;}
-#pl_package span.set6 {top: 50.0%; left: 52.5%;}
-#pl_package span.set7 {top: 54.5%; left: 58.5%;}
-#pl_package span.set8 {top: 61.5%; left: 58.5%;}
-#pl_package span.set9 {top: 68.0%; left: 58.5%;}
-#pl_package span.set10 {top: 94.0%; left: 71.5%;}
-#pl_package span.set11 {top: 94.0%; left: 85.5%;}
-.z3500{
-    z-index: 3500;
-}
+#pl_package span.set1 {top: 67.5%; left: 13.0%;}
+#pl_package span.set2 {top: 52.0%; left: 15.8%;}
+#pl_package span.set3 {top: 42.5%; left: 20.0%;}
+#pl_package span.set4 {top: 28.0%; left: 31.5%;}
+#pl_package span.set5 {top: 48.6%; left: 43.5%;}
+#pl_package span.set6 {top: 48.6%; left: 52.5%;}
+#pl_package span.set7 {top: 51.0%; left: 59.5%;}
+#pl_package span.set8 {top: 60.2%; left: 58.2%;}
+#pl_package span.set9 {top: 67.5%; left: 58.2%;}
+#pl_package span.set10 {top: 92.8%; left: 71.5%;}
+#pl_package span.set11 {top: 92.8%; left: 84.0%;}
+
 
 /*	pl_mspr
 */
@@ -322,8 +329,8 @@ float - plate_gis and stats
 #pl_station span {
 	/*display: none;*/
 	position: absolute;
-	font-size: 1em;
-	color: #ccf;
+	font-size: .9em;
+	color: #eef;
 	text-shadow:
 	-1px -1px 0 rgba(0,0,0,1),  
 	1px -1px 0 rgba(0,0,0,1),
@@ -333,39 +340,39 @@ float - plate_gis and stats
 #pl_station span.set1 {top: 78.6%; left: 6.0%;}
 #pl_station span.set2 {top: 74.3%; left: 8.2%;}
 #pl_station span.set3 {top: 63.1%; left: 10.2%;}
-#pl_station span.set4 {top: 57.5%; left: 11.0%;}
-#pl_station span.set5 {top: 51.1%; left: 9.7%;}
+#pl_station span.set4 {top: 58.5%; left: 11.0%;}
+#pl_station span.set5 {top: 49.1%; left: 9.5%;}
 #pl_station span.set6 {top: 43.1%; left: 8.9%;}
 #pl_station span.set7 {top: 39.1%; left: 10.2%;}
 #pl_station span.set8 {top: 35.1%; left: 11.5%;}
 #pl_station span.set9 {top: 29.6%; left: 12.9%;}
 #pl_station span.set10 {top: 24.2%; right: 87.7%;}
-#pl_station span.set11 {top: 19.7%; right: 83.1%;}
+#pl_station span.set11 {top: 19.0%; right: 82.0%;}
 #pl_station span.set12 {top: 27.6%; left: 17.9%;}
 #pl_station span.set13 {top: 23.8%; left: 22.2%;}
 #pl_station span.set14 {top: 18.3%; left: 24.2%;}
 #pl_station span.set15 {top: 14.4%; right: 76.4%;}
 #pl_station span.set16 {top: 10.9%; right: 74.2%;}
-#pl_station span.set17 {top: 4.7%; right: 70.9%;}
-#pl_station span.set18 {top: 1.7%; left: 29.7%;}
-#pl_station span.set19 {top: 4.7%; left: 31.7%;}
-#pl_station span.set20 {top: 7.7%; left: 33.5%;}
+#pl_station span.set17 {top: 4.0%; right: 70.9%;}
+#pl_station span.set18 {top: 1.0%; left: 29.7%;}
+#pl_station span.set19 {top: 4.0%; left: 31.7%;}
+#pl_station span.set20 {top: 7.0%; left: 33.5%;}
 #pl_station span.set21 {top: 15.8%; left: 38.4%;}
 #pl_station span.set22 {top: 24.9%; left: 39.9%;}
 #pl_station span.set23 {top: 30.6%; left: 41.7%;}
 #pl_station span.set24 {top: 36.9%; right: 55.2%;}
 #pl_station span.set25 {top: 40.2%; right: 50.6%;}
-#pl_station span.set26 {top: 30.1%; left: 53.3%;}
-#pl_station span.set27 {top: 32.8%; left: 55.5%;}
-#pl_station span.set28 {top: 43.9%; right: 40.6%;}
-#pl_station span.set29 {top: 36.6%; left: 62.5%;}
-#pl_station span.set30 {top: 39.6%; left: 64.5%;}
+#pl_station span.set26 {top: 29.1%; left: 53.3%;}
+#pl_station span.set27 {top: 31.8%; left: 55.5%;}
+#pl_station span.set28 {top: 44.5%; right: 40.6%;}
+#pl_station span.set29 {top: 35.5%; left: 62.5%;}
+#pl_station span.set30 {top: 38.5%; left: 64.5%;}
 #pl_station span.set31 {top: 47.3%; left: 68.5%;}
-#pl_station span.set32 {top: 59.4%; right: 32.4%;}
-#pl_station span.set33 {top: 70.7%; right: 31.0%;}
-#pl_station span.set34 {top: 79.2%; right: 30.4%;}
+#pl_station span.set32 {top: 57.0%; right: 31.7%;}
+#pl_station span.set33 {top: 71.5%; right: 30.4%;}
+#pl_station span.set34 {top: 78.0%; right: 30.4%;}
 #pl_station span.set35 {top: 86.3%; right: 26.2%;}
-#pl_station span.set36 {top: 81.9%; right: 20.6%;}
+#pl_station span.set36 {top: 81.0%; right: 20.6%;}
 #pl_station span.set37 {top: 89.8%; left: 82.0%;}
 #pl_station span.set38 {top: 87.1%; left: 84.6%;}
 
@@ -374,7 +381,7 @@ float - plate_gis and stats
 #pl_depot span {
 	/*display: none;*/
 	position: absolute;
-	font-size: 1em;
+	font-size: .9em;
 	color: #ccf;
 	text-shadow:
 	-1px -1px 0 rgba(0,0,0,1),  
@@ -382,7 +389,7 @@ float - plate_gis and stats
 	-1px 1px 0 rgba(0,0,0,1),
 	1px 1px 0 rgba(0,0,0,1);
 }
-#pl_depot span.set1 {top: 63.0%; left: 71.5%;}
+#pl_depot span.set1 {top: 62.5%; left: 70.0%;}
 
 
 
@@ -439,13 +446,20 @@ float - system donut
 }
 
 #plate_system {
-	z-index: 2000;
+	z-index: 1000;
 }
+#plate_system a.url_donut_system{
+	z-index: 3000;
+}
+
+/*#plate_system a.url_donut_system{
+	z-index: 3100;
+}*/
 
 #donut_plate {
 	position: absolute;
 	bottom: 1%;
-	left: 21.7%;
+	left: 18.7%;
 	width: 420px;
 	/*height: 400px;*/
 }
@@ -468,8 +482,8 @@ svg.svg_donut_system {
 }
 
 div#donut_plate > div.dp_top {
-	margin-left: 100px;
-	width: 210px;
+	margin-left: 87px;
+	width: 190px;
 	height: 130px;
 }
 div#donut_plate > div.dp_bottom {
@@ -483,14 +497,16 @@ div#donut_plate > div.dp_bottom {
 	display: block;
 	text-align: center;
 	font-size: .9em;
-	background: rgba(255,255,255,.25);
+	background: rgba(255,255,255,.15);
+	border-top: 1px solid rgba(255,255,255,.5);
 }
 .donut_title2_name {
 	margin-bottom: 3px;
 	display: block;
 	text-align: center;
 	font-size: .9em;
-	background: rgba(255,255,255,.15);
+	background: rgba(255,255,255,.1);
+	border-top: 1px solid rgba(255,255,255,.2);
 }
 
 
