--- a/assets/templates/page_info.html
+++ b/assets/templates/page_info.html
@@ -17,29 +17,23 @@
         <div style="float: left">
         <h1 style="margin-top: 15px;"><p class="" style="color: #15A6E9; font-weight: bold">Station</p></h1>
         <table class="table" style="font-size: 160%; font-weight: 600;">
-            <!--tr><th>X</th><th>Y</th></tr-->
             <%_.each(data.data.station, function(row) {%>
             <tr class="excel-dx" style="border: none;">
                 <td class="excel-d3" style="color: #009933; border: none; font-size: 16px; font: normal;"><%=row%></td>
             </tr>
             <%});%>
         </table>
+		<div style="text-align:right; padding-top:10px;margin-right: -225px;"><a href="#" style="color: #9EDD2E;" >Pier Chart <i class="loadpage fa fa-link"></i></a></div>
         </div>
         <div  style="float:right;">
         <h1 style="margin-top: 15px;"><p class="" style="color: #15A6E9; font-weight: bold">MSPR</p></h1>
         <table class="table" style="font-size: 160%; font-weight: 600;">
-            <!--tr><th>X</th><th>Y</th></tr-->
+			<%_.each(data.data.mspr, function(row) {%>
             <tr class="excel-dx" style="border: none;">
-                <td class="excel-d3" style="color:#009933; border: none; font-size: 16px; font: normal;">MSPR 1</td>
+                <td class="excel-d3" style="color: #009933; border: none; font-size: 16px; font: normal;"><%=row%></td>
             </tr>
-            <tr class="excel-dx" style="border: none;">
-                <td class="excel-d3" style="color:#009933; border: none; font-size: 16px; font: normal;">MSPR 2</td>
-            </tr>
-            <tr class="excel-dx" style="border: none;">
-                <td class="excel-d3" style="color:#009933; border: none; font-size: 16px; font: normal;">MSPR 3</td>
-            </tr>
+            <%});%>
         </table>
-		<div style="text-align:right; padding-top:10px;"><a href="#" style="color: #9EDD2E;" >Pier Chart <i class="loadpage fa fa-link"></i></a></div>
         </div>
         <!--<div style="text-align:right; padding-top:10px;"><a href="javascript:void(0);" style="color: #9EDD2E;" onClick="loadPage('<%=data.data.piers_url%>')">Pier Chart <i class="loadpage fa fa-link"></i></a></div>-->
         
