Signed-off-by: agailevictor <agailevictor@gmail.com>

--- a/assets/templates/gallery.html
+++ b/assets/templates/gallery.html
@@ -9,5 +9,10 @@
 	
 	<!--<div id="nanoGallery2" style="width: 90%"></div>-->
     <!--Modified by agaile to remove dummy data : 04/07/2016-->
-	<div id="nanoGallery" style="width: 90%"></div>
+	<div id="sliderFrame">
+	<h4 style="position: absolute; right: 25px; top: 10px; z-index: 999;background: rgba(0, 0, 0, 0.6);padding: 5px;">
+	<a style="color: #9EDD2E" href="#">Visit gallery <i class="fa fa-picture-o"></i></a>
+	</h4>
+	<div id="slider" style="width: 100%"></div>
+	</div>
 </div>
