--- a/assets/templates/region_progress.html
+++ b/assets/templates/region_progress.html
@@ -11,23 +11,23 @@
 	<!--h2>Header h2</h2-->
 	<table class="table table-bordered table-condensed table-hover" style="">
 	<thead>
-	<th style="color: #ffd461;text-align: center;">Region</th><th style="color: #FFAF78;text-align: center;">Actual</th><th style="color: #009e8c;text-align: center;">Variance</th>
+	<th style="color: #009e8c;text-align: center;">Region</th><th style="color: #FFAF78;text-align: center;">Actual</th><th style="color: #ffd461;text-align: center;">Variance</th>
 	</thead>
         <tbody>
             <tr>
-                <td style="text-align: center;">North</td>
-                <td style="color: #ffd461; text-align: center;">99.00</td>
-                <td style="color: #FFAF78; text-align: center;"><i class="fa fa-arrow-down"></i></td>
+                <td style="text-align: center;"><a href="north" >North</a></td>
+                <td style="color: #ffd461; text-align: center;"><a href="north">99.00</a></td>
+                <td style="color: #FFAF78; text-align: center;"><a href="north">-0.40%<i class="fa fa-arrow-down" style="color: #ff4500; float: right;padding-right: 30px;"></i></a></td>
             </tr>
             <tr>
-                <td style="text-align: center;">UG</td>
-                <td style="color: #ffd461; text-align: center;">46.30</td>
-                <td style="color: #FFAF78; text-align: center;"><i class="fa fa-arrow-down"></i></td>
+                <td style="text-align: center;"><a href="ug">UG</a></td>
+                <td style="color: #ffd461; text-align: center;"><a href="ug">46.30</a></td>
+                <td style="color: #FFAF78; text-align: center;"><a href="ug">-15.10%<i class="fa fa-arrow-down" style="color: #ff4500; float: right;padding-right: 30px;"></i></a></td>
             </tr>
             <tr>
-                <td style="text-align: center;">South</td>
-                <td style="color: #ffd461; text-align: center;">92.20</td>
-                <td style="color: #FFAF78; text-align: center;"><i class="fa fa-arrow-down"></i></td>
+                <td style="text-align: center;"><a href="south">South</a></td>
+                <td style="color: #ffd461; text-align: center;"><a href="south">92.20</a></td>
+                <td style="color: #FFAF78; text-align: center;"><a href="south">-6.80%<i class="fa fa-arrow-down" style="color: #ff4500; float: right;padding-right: 30px;"></i></a></td>
             </tr>
         </tbody>
 	</table>
