--- a/assets/templates/overall_progress.html
+++ b/assets/templates/overall_progress.html
@@ -10,6 +10,13 @@
         color: white;
         font-weight: bold;
     }
+    .overall_progress tbody tr td{
+        text-align: center;
+    }
+    .overall_progress tbody tr td:first-child{
+        text-align: left;
+        font-weight: 600;
+    }
 </style>
 <div class="header bg-dot30 excel-normal">
     <!--img src="/mpxd/assets/img/icons/line_chart-26.png" style="float: left;margin-right: 13px;"-->
@@ -24,7 +31,7 @@
     <!--<div class="it_cs_legend"><ul><li><i class="fa fa-circle" style="color: #008000"></i> Completed</li><li><i class="fa fa-circle" style="color: #ffff00"></i> In Progress</li><li><i class="fa fa-circle" style="color: #ff0000"></i> Handed Over with Snig list</li></ul></div>-->
 	<!--h2>Header h2</h2-->
     <!--Sebin-->
-	<table class="table table-bordered table-condensed table-hover" style="">
+	<table class="table table-bordered table-condensed table-hover overall_progress" style="">
 	<thead>
     <tr>
         <th rowspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">North Chainage</th>
@@ -42,71 +49,71 @@
 	</thead>
         <tbody>
             <tr>
-                <td>KD8</td>
+                <td><a href="">KD8<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
                 <td>0</td>
-                <td></td>
-                <td></td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td>KD9</td>
+                <td><a href="">KD9<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
                 <td>0</td>
-                <td></td>
-                <td></td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td>KD9a</td>
+                <td><a href="">KD9a<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
                 <td>0</td>
-                <td></td>
-                <td></td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td>KD10</td>
+                <td><a href="">KD10<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
                 <td>0</td>
-                <td></td>
-                <td></td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td>KD11</td>
+                <td><a href="">KD11<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
                 <td>0</td>
-                <td></td>
-                <td></td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td>KD11a</td>
+                <td><a href="">KD11a<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
                 <td>0</td>
-                <td></td>
-                <td></td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td>KD12</td>
+                <td><a href="">KD12<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
                 <td>0</td>
-                <td></td>
-                <td></td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
         </tbody>
-    <div style="text-align: right; margin-top: 15px;"> <i class="fa fa-circle" style="color:#2acd4a"></i><span style="color: #efefef">&nbsp;Completed&nbsp;&nbsp;</span>
-        <i class="fa fa-circle" style="color:#efe24b"></i><span style="color: #efefef">&nbsp;In Progress&nbsp;&nbsp;</span>
-        <i class="fa fa-circle" style="color:#E83737"></i><span style="color: #efefef">&nbsp;Pending&nbsp;&nbsp;</span>
-    </div>
+    <!--<div style="text-align: right; margin-top: 15px;"> <i class="fa fa-circle" style="color:#2acd4a"></i><span style="color: #efefef">&nbsp;Completed&nbsp;&nbsp;</span>-->
+        <!--<i class="fa fa-circle" style="color:#efe24b"></i><span style="color: #efefef">&nbsp;In Progress&nbsp;&nbsp;</span>-->
+        <!--<i class="fa fa-circle" style="color:#E83737"></i><span style="color: #efefef">&nbsp;Pending&nbsp;&nbsp;</span>-->
+    <!--</div>-->
 </div>
