--- a/assets/templates/region_progress.html
+++ b/assets/templates/region_progress.html
@@ -15,17 +15,17 @@
 	</thead>
         <tbody>
             <tr>
-                <td style="text-align: center;"><a href="north" >North</a></td>
+                <td style="text-align: center;"><a href="north"><span style="font-weight: 600;">North</span><i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td style="color: #ffd461; text-align: center;"><a href="north">99.00</a></td>
                 <td style="color: #FFAF78; text-align: center;"><a href="north">-0.40%<i class="fa fa-arrow-down" style="color: #ff4500; float: right;padding-right: 30px;"></i></a></td>
             </tr>
             <tr>
-                <td style="text-align: center;"><a href="ug">UG</a></td>
+                <td style="text-align: center;"><a href="ug"><span style="font-weight: 600;">UG</span><i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td style="color: #ffd461; text-align: center;"><a href="ug">46.30</a></td>
                 <td style="color: #FFAF78; text-align: center;"><a href="ug">-15.10%<i class="fa fa-arrow-down" style="color: #ff4500; float: right;padding-right: 30px;"></i></a></td>
             </tr>
             <tr>
-                <td style="text-align: center;"><a href="south">South</a></td>
+                <td style="text-align: center;"><a href="south"><span style="font-weight: 600;">South</span><i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td style="color: #ffd461; text-align: center;"><a href="south">92.20</a></td>
                 <td style="color: #FFAF78; text-align: center;"><a href="south">-6.80%<i class="fa fa-arrow-down" style="color: #ff4500; float: right;padding-right: 30px;"></i></a></td>
             </tr>
