Signed-off-by: sebint <sebin@hummingsoft.com.my>

--- a/assets/templates/overall_progress_chart.html
+++ b/assets/templates/overall_progress_chart.html
@@ -11,5 +11,5 @@
 	<!--h2>Header h2</h2-->
 	<!--<div class="progress-chart-1" style="width:33.333333%; float:left"></div>-->
 	<div class="progress-chart-2" style="width:100%; float:left"></div>
-	<div class="progress-chart-3" style="width:100%; float:left"></div>
+	<!--<div class="progress-chart-3" style="width:100%; float:left"></div>-->
 </div>
