Signed-off-by: janeelizabethjose <jane@hummingsoft.com.my>

--- a/assets/templates/overall_progress.html
+++ b/assets/templates/overall_progress.html
@@ -49,7 +49,7 @@
 	</thead>
         <tbody>
             <tr>
-                <td><a href="">KD8<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd8">KD8<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -58,7 +58,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="">KD9<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd9">KD9<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -67,7 +67,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="">KD9a<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd9a">KD9a<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -76,7 +76,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="">KD10<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd10">KD10<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -85,7 +85,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="">KD11<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd11">KD11<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -94,7 +94,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="">KD11a<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd11a">KD11a<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -103,7 +103,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="">KD12<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd12">KD12<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
