Signed-off-by: janeelizabethjose <jane@hummingsoft.com.my>

--- a/assets/templates/overall_progress.html
+++ b/assets/templates/overall_progress.html
@@ -103,7 +103,61 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="kd12">KD12<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd12n">KD12 North<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td>100.0</td>
+                <td>100.0</td>
+                <td>0</td>
+                <td>0</td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
+            </tr>
+            <tr>
+                <td><a href="kd12u">KD12 UG<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td>100.0</td>
+                <td>100.0</td>
+                <td>0</td>
+                <td>0</td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
+            </tr>
+            <tr>
+                <td><a href="kd12s">KD12 South<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td>100.0</td>
+                <td>100.0</td>
+                <td>0</td>
+                <td>0</td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
+            </tr>
+            <tr>
+                <td><a href="kd13">KD13<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td>100.0</td>
+                <td>100.0</td>
+                <td>0</td>
+                <td>0</td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
+            </tr>
+            <tr>
+                <td><a href="kd14">KD14<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td>100.0</td>
+                <td>100.0</td>
+                <td>0</td>
+                <td>0</td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
+            </tr>
+            <tr>
+                <td><a href="kd15">KD15<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td>100.0</td>
+                <td>100.0</td>
+                <td>0</td>
+                <td>0</td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
+            </tr>
+            <tr>
+                <td><a href="kd16">KD16<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
